cmake_minimum_required(VERSION 3.31)
project(CTDLGT C)

set(CMAKE_C_STANDARD 11)

add_executable(CTDLGT
        ss1/1-3.c
        ss1/1-4.c
        ss1/1-5.c
        ss1/1-6.c
        ss1/1-7.c
        ss1/1-8.c
        ss1/1-9.c
        ss2/PTIT_CNTT1_IT201_Session02_Bai01.c
        ss2/PTIT_CNTT1_IT201_Session02_Bai02.c
        ss2/PTIT_CNTT1_IT201_Session02_Bai03.c
        ss2/PTIT_CNTT1_IT201_Session02_Bai04.c
        ss2/PTIT_CNTT1_IT201_Session02_Bai05.c
        ss2/PTIT_CNTT1_IT201_Session02_Bai06.c
        ss2/PTIT_CNTT1_IT201_Session02_Bai07.c
        ss2/PTIT_CNTT1_IT201_Session02_Bai08.c
        ss2/PTIT_CNTT1_IT201_Session02_Bai09.c
        ss2/PTIT_CNTT1_IT201_Session02_Bai10.c
)